[project]
name = "linkedin-mcp-server"
version = "1.4.0"
description = "MCP server for LinkedIn profile, company, and job scraping with Claude AI integration. Supports direct profile/company/job URL scraping with secure credential storage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.1",
    "inquirer>=3.4.0",
    "keyring>=25.6.0",
    "linkedin-scraper",
    "pyperclip>=1.9.0",
]

[project.scripts]
linkedin-mcp-server = "linkedin_mcp_server.cli_main:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["linkedin_mcp_server*"]
exclude = ["assets*", "docs*", "tests*"]

[tool.setuptools.package-data]
linkedin_mcp_server = ["py.typed"]

[tool.uv.sources]
linkedin-scraper = { git = "https://github.com/stickerdaniel/linkedin_scraper.git" }
